--- a/AEMET_MEJORA.ipynb
+++ b/AEMET_MEJORA.ipynb
@@ -38,7 +38,7 @@
         "\n",
         "######FUNCION LEER ARCHIVO TXT CON NOMBRE ESTACIONES Y EJECUTAR#####\n",
         "def read_and_exec():\n",
-        "  f = open(\"Prova.txt\", \"r\",encoding='utf8') #####TXT donde lee estaciones##### \n",
+        "  f = open(\"Configuracion Estaciones/Prova.txt\", \"r\",encoding='utf8') #####TXT donde lee estaciones##### \n",
         "  for x in f:\n",
         "    x=x.rstrip(\"\\n\")\n",
         "    Estacion_horas(x)\n",
@@ -88,7 +88,7 @@
         "    i=i+1\n",
         "  Nombre_ubi=str(df.ubi[0])\n",
         "  Nombre_tiempo=str(df.fint[10])\n",
-        "  Nombre_Total=\"AEMET\"+\" \"+Nombre_tiempo[0:10]+\" \"+Nombre_ubi+\" \"+Estation+\".csv\"\n",
+        "  Nombre_Total=\"Datos_Guardados/AEMET\"+\" \"+Nombre_tiempo[0:10]+\" \"+Nombre_ubi+\" \"+Estation+\".csv\"\n",
         "  df.to_csv(Nombre_Total,index=False)\n",
         "\n",
         "\n",
